--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#"><i class="fas fa-gamepad text-danger"></i><span class="text-white"> TodoListJv</span></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Accueil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="video-games" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Liste des jeux</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
