--- a/src/app/video-game/video-games-list/video-games-list.component.html
+++ b/src/app/video-game/video-games-list/video-games-list.component.html
@@ -1,12 +1,34 @@
-<ul class="list-group navbar-bottom">
-  <li class="list-group-item" *ngFor="let videoGame of videoGames; let i = index;">
-    <div class="col">
-      <img src="{{ videoGame.backgroundImage }}" alt="" class="img-fluid">
-    </div>
-    <div class="col">
-      {{ videoGame.name }}
-    </div>
+<div class="row navbar-bottom">
+  <div class="col-lg-3" *ngFor="let videoGame of videoGames; let i = index;">
+    <div class="card-group mb-3">
+      <div class="card" style="width: 18rem;">
+        <img src="{{ videoGame.backgroundImage }}" class="card-img-top img-card" alt="...">
+        <div class="card-body pl-2 pr-2 text-center">
+          <h6 class="card-title font-weight-bold">{{ videoGame.name }}</h6>
 
+          <p class="mb-0">{{ videoGame.released | date:"dd/MM/yyyy" }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-  </li>
-</ul>
+<p></p>
+
+<nav aria-label="Page navigation example" class="d-flex justify-content-center mt-3">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
