Refactoring VideoGamesListComponent. Recover data for SingleVideoGameComponent and front-end done.

--- a/src/app/video-game/video-games-list/video-games-list.component.css
+++ b/src/app/video-game/video-games-list/video-games-list.component.css
@@ -1,7 +1,11 @@
 .navbar-bottom {
-  margin-top: 70px;
+  margin-top: 56px;
 }
 
 .img-card {
   height: 150px;
+}
+
+.text-red {
+  color: #ff4444 !important;
 }
