--- a/src/app/video-game/single-video-game/single-video-game.component.html
+++ b/src/app/video-game/single-video-game/single-video-game.component.html
@@ -1,1 +1,65 @@
-<p>single-video-game works!</p>
+<div class="container-fluid bg-light navbar-bottom py-4">
+  <h2 class="text-center mb-0">
+    {{ singleVideoGame.name }}
+  </h2>
+  <h6 class="text-muted text-center">
+    Date de sortie : <span class="font-weight-bold">{{ singleVideoGame.released | date:"dd/MM/yyyy" }}</span>
+  </h6>
+</div>
+
+<div class="container">
+  <div class="row mt-4">
+    <div class="col-8 border-right">
+      <img src="{{ singleVideoGame.background_image }}" alt="" class="img-fluid">
+
+      <div class="mt-2">
+          <span class="badge badge-danger mr-2" *ngFor="let genre of singleVideoGame.genres">
+            {{ genre.name }}
+          </span>
+      </div>
+
+      <p class="mt-3">{{ singleVideoGame.description_raw }}</p>
+    </div>
+    <div class="col-4">
+      <h3 class="text-center py-3">
+        Metacritic :
+        <span class="badge badge-dark">
+          {{ singleVideoGame.metacritic }}
+        </span>
+      </h3>
+
+      <div class="card text-center">
+        <div class="card-header">
+          <h5 class="mb-0" *ngIf="singleVideoGame.platforms?.length > 1">
+            Plateformes
+          </h5>
+          <h5 class="mb-0" *ngIf="singleVideoGame.platforms?.length === 1">
+            Plateforme
+          </h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item" *ngFor="let platform of singleVideoGame.platforms">
+            {{ platform.platform.name }}
+          </li>
+        </ul>
+      </div>
+
+      <div class="card text-center mt-3">
+        <div class="card-header">
+          <h5 class="mb-0" *ngIf="singleVideoGame.developers?.length > 1">
+            Développeurs
+          </h5>
+          <h5 class="mb-0" *ngIf="singleVideoGame.developers?.length === 1">
+            Développeur
+          </h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item" *ngFor="let developers of singleVideoGame.developers">
+            {{ developers.name }}
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
