--- a/src/app/video-game/video-games-list/video-games-list.component.html
+++ b/src/app/video-game/video-games-list/video-games-list.component.html
@@ -1,34 +1,29 @@
-<div class="row navbar-bottom">
-  <div class="col-lg-3" *ngFor="let videoGame of videoGames; let i = index;">
-    <div class="card-group mb-3">
-      <div class="card" style="width: 18rem;">
-        <img src="{{ videoGame.backgroundImage }}" class="card-img-top img-card" alt="...">
-        <div class="card-body pl-2 pr-2 text-center">
-          <h6 class="card-title font-weight-bold">{{ videoGame.name }}</h6>
+<div class="container-fluid bg-light navbar-bottom py-4">
+  <h2 class="text-center mb-0">
+    Liste des jeux
+  </h2>
+  <h6 class="text-muted text-center">
+    Retrouvez tous les jeux vidéo de l'histoire !
+  </h6>
+</div>
 
-          <p class="mb-0">{{ videoGame.released | date:"dd/MM/yyyy" }}</p>
+<div class="container">
+  <div class="row mt-4">
+    <div class="col-lg-3" *ngFor="let videoGame of videoGames; let i = index;">
+      <div class="card-group mb-3">
+        <div class="card" style="width: 18rem;">
+          <img src="{{ videoGame.background_image }}" class="card-img-top img-card" alt="Image de {{ videoGame.name }}">
+          <div class="card-body pl-2 pr-2 text-center">
+            <h6 class="card-title font-weight-bold mb-0">
+              <a (click)="onSingleVideoGame(videoGame.slug)" style="cursor: pointer;" class="text-red">
+                {{ videoGame.name }}
+              </a>
+            </h6>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<p></p>
-
-<nav aria-label="Page navigation example" class="d-flex justify-content-center mt-3">
-  <ul class="pagination">
-    <li class="page-item">
-      <a class="page-link" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
-    </li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span>
-      </a>
-    </li>
-  </ul>
-</nav>
 
