Pagination on VideoGamesList.

--- a/src/app/video-game/video-games-list/video-games-list.component.html
+++ b/src/app/video-game/video-games-list/video-games-list.component.html
@@ -24,6 +24,12 @@
       </div>
     </div>
   </div>
+
+  <div class="text-center py-4">
+    <button class="btn btn-danger" (click)="onNextPage(next)" *ngIf="getCurrentPage() < getPages()">
+      Afficher plus de jeux
+    </button>
+  </div>
 </div>
 
 
