--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="video-games" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Liste des jeux</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Plateformes</a>
+        </li>
       </ul>
     </div>
   </div>
