PlatformListComponent created. Front-end done and recover data from API.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,10 +10,10 @@
           <a class="nav-link text-white" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="video-games" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Liste des jeux</a>
+          <a class="nav-link text-white" routerLink="video-games" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Jeux</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Plateformes</a>
+          <a class="nav-link text-white" routerLink="platforms" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Plateformes</a>
         </li>
       </ul>
     </div>
