DevelopersListComponent created. Front-end done and recovering data from the api.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="platforms" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Plateformes</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="developers" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Développeurs</a>
+        </li>
       </ul>
     </div>
   </div>
