--- a/src/app/platform/platforms-list/platforms-list.component.html
+++ b/src/app/platform/platforms-list/platforms-list.component.html
@@ -15,7 +15,7 @@
           <img src="{{ platform.image_background }}" class="card-img-top img-card" alt="Image de {{ platform.name }}">
           <div class="card-body pl-2 pr-2 text-center">
             <h6 class="card-title font-weight-bold mb-0">
-              <a style="cursor: pointer;" class="text-primary" (click)="onSinglePlatform(platform.id)">
+              <a style="cursor: pointer;" class="text-red" (click)="onSinglePlatform(platform.slug)">
                 {{ platform.name }}
               </a>
             </h6>
