--- a/src/app/video-game/video-games-list/video-games-list.component.html
+++ b/src/app/video-game/video-games-list/video-games-list.component.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="text-center py-4">
-    <app-pagination [count]="count" [next]="next"></app-pagination>
+    <app-pagination [count]="count" [next]="next" [paginationName]="paginationName"></app-pagination>
   </div>
 </div>
 
