Add video games, pagination and search bar on SinglePlatform.

--- a/src/app/platform/single-platform/single-platform.component.html
+++ b/src/app/platform/single-platform/single-platform.component.html
@@ -7,15 +7,36 @@
   </h6>
 </div>
 
-<div class="container" *ngIf="singlePlatform">
-  <div class="mt-4">
-    <div class="col-12">
-      <img src="{{ singlePlatform.image_background }}" alt="" class="img-fluid">
-
-      <p class="mt-3">{{ singlePlatform.description }}</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 bg-light py-4 rounded mt-4 border">
+      <app-search-video-game></app-search-video-game>
     </div>
   </div>
 </div>
 
-<app-loader *ngIf="!singlePlatform"></app-loader>
+<div class="container mb-5" *ngIf="videoGames">
+  <div class="row mt-4">
+    <div class="col-lg-3" *ngFor="let videoGame of videoGames; let i = index;">
+      <div class="card-group mb-3">
+        <div class="card" style="width: 18rem;">
+          <img src="{{ videoGame.background_image }}" class="card-img-top img-card" alt="Image de {{ videoGame.name }}">
+          <div class="card-body pl-2 pr-2 text-center">
+            <h6 class="card-title font-weight-bold mb-0">
+              <a (click)="onSingleVideoGame(singlePlatform.id, videoGame.slug)" style="cursor: pointer;" class="text-red">
+                {{ videoGame.name }}
+              </a>
+            </h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="text-center py-4">
+    <app-pagination [count]="count" [next]="next" [paginationName]="paginationName"></app-pagination>
+  </div>
+</div>
+
+<app-loader *ngIf="!videoGames"></app-loader>
 
