Adding authentication on application.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<footer class="text-center py-3 bg-dark text-white">© 2020 Copyright :
+  <a href="http://d-riviere.fr/"> d-riviere.fr</a>
+</footer>
+
+
+
+
