--- a/src/app/platform/platforms-list/platforms-list.component.html
+++ b/src/app/platform/platforms-list/platforms-list.component.html
@@ -7,8 +7,8 @@
   </h6>
 </div>
 
-<div class="container mb-5" *ngIf="platforms">
-  <div class="row mt-4">
+<div class="container mb-5 mt-5" *ngIf="platforms">
+  <div class="row">
     <div class="col-lg-3" *ngFor="let platform of platforms; let i = index;">
       <div class="card-group mb-3">
         <div class="card" style="width: 18rem;">
