--- a/src/app/video-game/search-video-game/search-video-game.component.html
+++ b/src/app/video-game/search-video-game/search-video-game.component.html
@@ -3,5 +3,5 @@
       <label for="name" class="mr-3">Nom du jeu</label>
       <input type="text" id="name" class="form-control mr-3" formControlName="name" placeholder="Entrez le nom du jeu que vous recherchez ...">
     </div>
-    <button type="submit" class="btn btn-primary">Rechercher</button>
+    <button type="submit" class="btn btn-danger">Rechercher</button>
 </form>
