--- a/src/app/video-game/single-video-game/single-video-game.component.html
+++ b/src/app/video-game/single-video-game/single-video-game.component.html
@@ -7,8 +7,8 @@
   </h6>
 </div>
 
-<div class="container" *ngIf="singleVideoGame">
-  <div class="row mt-4">
+<div class="container mb-5 mt-5" *ngIf="singleVideoGame">
+  <div class="row">
     <div class="col-8 border-right">
       <img src="{{ singleVideoGame.background_image }}" alt="" class="img-fluid">
 
