--- a/src/app/developer/developers-list/developers-list.component.html
+++ b/src/app/developer/developers-list/developers-list.component.html
@@ -15,8 +15,8 @@
   </div>
 </div>
 
-<div class="container mb-5" *ngIf="developers">
-  <div class="row mt-4 d-flex justify-content-center">
+<div class="container mb-5 mt-5" *ngIf="developers">
+  <div class="row d-flex justify-content-center">
     <div class="col-lg-3" *ngFor="let developer of developers; let i = index;">
       <div class="card-group mb-3">
         <div class="card" style="width: 18rem;">
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <div class="text-center py-4">
+  <div class="text-center mt-3">
     <app-pagination [count]="count" [next]="next" [paginationName]="paginationName"></app-pagination>
   </div>
 </div>
