--- a/src/app/video-game/video-games-list/video-games-list.component.html
+++ b/src/app/video-game/video-games-list/video-games-list.component.html
@@ -9,14 +9,14 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-12 bg-light py-4 rounded mt-4 border">
+    <div class="col-12 bg-light py-4 rounded mt-5 border">
       <app-search-video-game></app-search-video-game>
     </div>
   </div>
 </div>
 
-<div class="container mb-5" *ngIf="videoGames">
-  <div class="row mt-4">
+<div class="container mb-5 mt-5" *ngIf="videoGames">
+  <div class="row">
     <div class="col-lg-3" *ngFor="let videoGame of videoGames; let i = index;">
       <div class="card-group mb-3">
         <div class="card" style="width: 18rem;">
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="text-center py-4">
+  <div class="text-center mt-3">
     <app-pagination [count]="count" [next]="next" [paginationName]="paginationName"></app-pagination>
   </div>
 </div>
