--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,6 +36,18 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-white" routerLink="profile" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" *ngIf="isAuth">
+            <i class="fas fa-user text-danger"></i>
+            Mon profil
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="profile/lists" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" *ngIf="isAuth">
+            <i class="fas fa-bars text-danger"></i>
+            Mes listes
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" *ngIf="isAuth" (click)="onSignOut()" style="cursor:pointer;">
             <i class="fas fa-sign-out-alt text-danger"></i>
             Déconnexion
