--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,5 +1,5 @@
-<div class="container text-center">
-  <div class="spinner-border text-danger loader-margin-top" style="width: 5rem; height: 5rem;" role="status">
+<div class="text-center">
+  <div class="spinner-border text-danger loader-margin" style="width: 5rem; height: 5rem;" role="status">
     <span class="sr-only">Loading...</span>
   </div>
 </div>
