--- a/src/app/video-game/single-video-game/single-video-game.component.html
+++ b/src/app/video-game/single-video-game/single-video-game.component.html
@@ -5,6 +5,15 @@
   <h6 class="text-muted text-center">
     Date de sortie : <span class="font-weight-bold">{{ singleVideoGame.released | date:"dd/MM/yyyy" }}</span>
   </h6>
+  <div class="dropdown text-center" *ngIf="isAuth">
+    <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Ajouter à la liste
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" style="cursor:pointer;" (click)="onSaveGameToDoList(singleVideoGame)">Jeux à faire</a>
+      <a class="dropdown-item" style="cursor:pointer;" (click)="onSaveGameDoneList(singleVideoGame)">Jeux terminer</a>
+    </div>
+  </div>
 </div>
 
 <div class="container mb-5 mt-5" *ngIf="singleVideoGame">
@@ -21,12 +30,14 @@
       <p class="mt-3">{{ singleVideoGame.description_raw }}</p>
     </div>
     <div class="col-4">
-      <h3 class="text-center py-3">
-        Metacritic :
-        <span class="badge badge-dark">
+      <div class="card py-3 mb-3">
+        <h3 class="text-center mb-0">
+          Metacritic :
+          <span class="badge badge-dark">
           {{ singleVideoGame.metacritic }}
         </span>
-      </h3>
+        </h3>
+      </div>
 
       <div class="card text-center">
         <div class="card-header">
