--- a/src/app/profile/list/list.component.css
+++ b/src/app/profile/list/list.component.css
@@ -9,3 +9,16 @@
 .text-red {
   color: #ff4444 !important;
 }
+
+.btn-delete {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  background-color: #ff4444;
+  color: white;
+  font-size: 16px;
+  padding: 4px 12px;
+  border: none;
+  cursor: pointer;
+  border-bottom-left-radius: 10px;
+}
